# unified-runtime

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/scripts/: compute_benchmarks.py
.github/workflows/: benchmarks-nightly.yml  benchmarks-reusable.yml  benchmarks.yml  benchmarks_compute.yml  benchmarks_core.yml  benchmarks_level_zero.yml  cmake.yml  docs.yml  e2e_core.yml  e2e_level_zero.yml  e2e_nightly.yml  preview.yml  static.yml
benchmarks/: CMakeLists.txt
benchmarks/common/: CMakeLists.txt  fixtures.hpp
benchmarks/imm_cmd/: CMakeLists.txt  event_reuse.cpp
cmake/: helpers.cmake  match.cmake
examples/collector/: README.md  collector.cpp
include/: ur.py  ur_ddi.h
scripts/: run.py
scripts/benchmarks/: history.py  main.py  output.py  output_html.py
scripts/benchmarks/benches/: api_overhead.py  base.py  easywave.py  options.py  quicksilver.py  test.py  velocity.py
scripts/benchmarks/utils/: utils.py
scripts/core/: INTRO.rst
scripts/templates/: api.py.mako  ldrddi.cpp.mako  libapi.cpp.mako  trcddi.cpp.mako  valddi.cpp.mako
source/: ur_api.cpp
source/adapters/level_zero/: CMakeLists.txt  adapter.cpp  adapter.hpp  command_buffer.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  event.cpp  event.hpp  kernel.cpp  memory.cpp  memory.hpp  platform.cpp  program.cpp  program.hpp  queue.cpp  queue.hpp
source/adapters/level_zero/helpers/: kernel_helpers.cpp  kernel_helpers.hpp
source/adapters/level_zero/v2/: api.cpp  command_list_cache.cpp  context.cpp  event.cpp  event.hpp  event_pool.cpp  event_provider_normal.cpp  event_provider_normal.hpp  kernel.cpp  kernel.hpp  queue_immediate_in_order.cpp  queue_immediate_in_order.hpp
source/common/: CMakeLists.txt  latency_tracker.hpp  ur_util.hpp
source/drivers/null/: ur_nullddi.cpp
source/loader/: CMakeLists.txt  ur_ldrddi.cpp  ur_lib.cpp  ur_lib.hpp  ur_libapi.cpp  ur_loader.cpp  ur_loader.hpp
source/loader/layers/: ur_proxy_layer.hpp
source/loader/layers/sanitizer/: asan_interceptor.cpp  asan_report.cpp  ur_sanitizer_layer.cpp  ur_sanitizer_layer.hpp
source/loader/layers/tracing/: ur_tracing_layer.cpp  ur_tracing_layer.hpp  ur_trcddi.cpp
source/loader/layers/validation/: ur_leak_check.hpp  ur_valddi.cpp  ur_validation_layer.cpp  ur_validation_layer.hpp
test/: CMakeLists.txt  deadlock.cpp
test/adapters/level_zero/v2/: event_pool_test.cpp
test/fuzz/: urFuzz.cpp
test/layers/tracing/: hello_world.out.match
test/performance/: enqueue_kernel.cpp
test/python/: CMakeLists.txt  basic.py
test/unified_memory_allocation/: memoryPool.cpp
test/unified_memory_allocation/common/: uma_helpers.hpp
